# quickeeg

./: README.md  pyproject.toml
.github/workflow/: superlinter.yml
.github/workflows/: publish-package-pypi.yml  pytest.yml  superlinter.yml
quickeeg/: quickeeg_main.py  vistim_main.py
quickeeg/helpers/: preprocessing.py  report.py  simulate.py
quickeeg/tests/: test_preprocessing.py  test_simulate.py
vistim_preprocessing/: vistim_main.py
vistim_preprocessing/helpers/: preprocessing.py
