[project]
name = "quickeeg"
version = "0.1.0"
authors = [
  { name="Chad Williams", email="chad_williams@brown.edu" },
]
description = "This package provides a quick and easy pipeline to process EEG files and generate a report. It is a wrapper for mne."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "numpy~=2.1.3",
  "matplotlib~=3.9.2",
  "mne~=1.8.0",
  "scikit-learn~=1.5.2",
  "markdown_pdf~=1.3.1"
]

[project.urls]
"Repository" = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
